створено іконки в секції переваги

--- a/index.html
+++ b/index.html
@@ -64,28 +64,48 @@
         <div class="container">
           <h2 class="visually-hidden" hidden>Преимущества</h2>
           <ul class="benefits-list list">
-            <li class="benefits-list-item icon-antenna">
+            <li class="benefits-list-item">
+              <div class="list-icon">
+                <svg class="icon-img">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Внимание к деталям</h3>
               <p class="benefits-list-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="benefits-list-item icon-clock">
+            <li class="benefits-list-item">
+              <div class="list-icon">
+                <svg class="icon-img">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Пунктуальность</h3>
               <p class="benefits-list-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="benefits-list-item icon-diagram">
+            <li class="benefits-list-item">
+              <div class="list-icon">
+                <svg class="icon-img">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Планирование</h3>
               <p class="benefits-list-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="benefits-list-item icon-astronaut">
+            <li class="benefits-list-item">
+              <div class="list-icon">
+                <svg class="icon-img">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Современные технологии</h3>
               <p class="benefits-list-text">
                 Значимость этих проблем настолько очевидна, что реализация
