додано іконки до секції постійні клієнти

--- a/index.html
+++ b/index.html
@@ -344,6 +344,50 @@
       <section class="customers">
         <div class="container">
           <h2 class="subtitle">Постоянные клиенты</h2>
+          <ul class="costumers-list list">
+            <li class="costumers-list-item">
+              <a class="costumers-list-link" href="">
+                <svg class="costumers-list-icon" width="45" height="50">
+                  <use href="./images/sprite.svg#icon-logoone"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="costumers-list-item">
+              <a class="costumers-list-link" href="">
+                <svg class="costumers-list-icon" width="40" height="52">
+                  <use href="./images/sprite.svg#icon-logotwo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="costumers-list-item">
+              <a class="costumers-list-link" href="">
+                <svg class="costumers-list-icon" width="42" height="42">
+                  <use href="./images/sprite.svg#icon-logothree"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="costumers-list-item">
+              <a class="costumers-list-link" href="">
+                <svg class="costumers-list-icon" width="80" height="42">
+                  <use href="./images/sprite.svg#icon-logofour"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="costumers-list-item">
+              <a class="costumers-list-link" href="">
+                <svg class="costumers-list-icon" width="59" height="47">
+                  <use href="./images/sprite.svg#icon-logofive"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="costumers-list-item">
+              <a class="costumers-list-link" href="">
+                <svg class="costumers-list-icon" width="88" height="45">
+                  <use href="./images/sprite.svg#icon-logosix"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
