--- a/portfolio.html
+++ b/portfolio.html
@@ -91,123 +91,143 @@
           </ul>
           <ul class="work-examples-list list">
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm1.jpg"
-                alt="ноутбук"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">Технокряк</h2>
-                <p class="work-examples-text">Веб-сайт</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm1.jpg"
+                  alt="ноутбук"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">Технокряк</h2>
+                  <p class="work-examples-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm2.jpg"
-                alt="гра в баскетбол"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="work-examples-text">Дизайн</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm2.jpg"
+                  alt="гра в баскетбол"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="work-examples-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm3.jpg"
-                alt="лого ресторану"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">Ресторан Seafood</h2>
-                <p class="work-examples-text">Приложение</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm3.jpg"
+                  alt="лого ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">Ресторан Seafood</h2>
+                  <p class="work-examples-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm4.jpg"
-                alt="наушники"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">Проект Prime</h2>
-                <p class="work-examples-text">Маркетинг</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm4.jpg"
+                  alt="наушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">Проект Prime</h2>
+                  <p class="work-examples-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm5.jpg"
-                alt="бокси"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">Проект Boxes</h2>
-                <p class="work-examples-text">Приложение</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm5.jpg"
+                  alt="бокси"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">Проект Boxes</h2>
+                  <p class="work-examples-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm6.jpg"
-                alt="монитор компютера"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">Inspiration has no Borders</h2>
-                <p class="work-examples-text">Веб-сайт</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm6.jpg"
+                  alt="монитор компютера"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="work-examples-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm7.jpg"
-                alt="журнал"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">Издание Limited Edition</h2>
-                <p class="work-examples-text">Дизайн</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm7.jpg"
+                  alt="журнал"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">Издание Limited Edition</h2>
+                  <p class="work-examples-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm8.jpg"
-                alt="марка"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">Проект LAB</h2>
-                <p class="work-examples-text">Маркетинг</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm8.jpg"
+                  alt="марка"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">Проект LAB</h2>
+                  <p class="work-examples-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="work-examples-item">
-              <img
-                class="work-examples-images"
-                src="./images/portfolio/exm9.jpg"
-                alt="нетбук"
-                width="370"
-                height="294"
-              />
-              <div class="work-examples-content">
-                <h2 class="work-examples-title">Growing Business</h2>
-                <p class="work-examples-text">Приложение</p>
-              </div>
+              <a class="portfolio-photo-link link" href="">
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm9.jpg"
+                  alt="нетбук"
+                  width="370"
+                  height="294"
+                />
+                <div class="work-examples-content">
+                  <h2 class="work-examples-title">Growing Business</h2>
+                  <p class="work-examples-text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
